--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "repository": "https://github.com/Nathan-E-White/stock_website_demo.git",
   "author": "Nathan-E-White <nwnn4@mail.missouri.edu>",
   "license": "(c) University of Missouri, 2021. All rights reserved.",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "axios": "^0.21.4",
+    "react-scripts": "^4.0.3"
+  }
 }
