--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
   "author": "Nathan-E-White <nwnn4@mail.missouri.edu>",
   "license": "(c) University of Missouri, 2021. All rights reserved.",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "axios": "^0.21.4",
     "react-scripts": "^4.0.3"
