--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@types/react": "^17.0.24",
     "axios": "^0.21.4",
+    "react": "^17.0.2",
     "react-scripts": "^4.0.3"
   }
 }
