--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react": "^17.0.24",
     "axios": "^0.21.4",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
+    "react-financial-charts": "^1.3.1",
     "react-scripts": "^4.0.3"
   }
 }
