--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-financial-charts": "^1.3.1",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "semantic-ui-react": "^2.0.4"
   }
 }
