--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
+    "react-dom": "^17.0.2",
     "react-financial-charts": "^1.3.1",
     "react-scripts": "^4.0.3",
+    "redis": "^3.1.2",
     "semantic-ui-react": "^2.0.4"
   }
 }
