--- a/package.json
+++ b/package.json
@@ -15,13 +15,29 @@
   },
   "dependencies": {
     "@types/react": "^17.0.24",
+    "@types/redis": "^2.8.32",
     "axios": "^0.21.4",
     "react": "^17.0.2",
-    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-financial-charts": "^1.3.1",
     "react-scripts": "^4.0.3",
     "redis": "^3.1.2",
-    "semantic-ui-react": "^2.0.4"
+    "semantic-ui-react": "^2.0.4",
+    "typescript": "^4.4.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^17.0.9"
   }
 }
