--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-dom": "^17.0.2",
     "react-financial-charts": "^1.3.1",
     "react-scripts": "^4.0.3",
+    "react-super-styled": "^0.7.1",
     "redis": "^3.1.2",
     "semantic-ui-react": "^2.0.4",
+    "styled-components": "^5.3.1",
     "typescript": "^4.4.3"
   },
   "browserslist": {
@@ -38,6 +40,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^17.0.9"
+    "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.14"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
